✅ 添加 check_health 测试

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "my-zero2prod"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
+
 [dependencies]
 axum = "0.8.4"
+reqwest = "0.12.23"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
