--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ name = "zero2prod"
 [dependencies]
 axum = "0.8.4"
 reqwest = "0.12.23"
+serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
