✨ 添加数据库迁移文件

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,12 @@ path = "src/lib.rs"
 path = "src/main.rs"
 name = "zero2prod"
 
+[workspace]
+members = [".", "migration"]
+
 [dependencies]
 axum = "0.8.4"
 reqwest = "0.12.23"
+sea-orm = { version = "1.1.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"]}
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
