--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,10 @@ members = [".", "migration"]
 
 [dependencies]
 axum = "0.8.4"
+chrono = "0.4.41"
+config = "0.15.15"
 reqwest = "0.12.23"
 sea-orm = { version = "1.1.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"]}
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1.18.1", features = ["v4"] }
