--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ sea-orm = { version = "1.1.15", features = ["sqlx-postgres", "runtime-tokio-rust
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1.18.1", features = ["v4"] }
+migration = { path = "migration" }
