--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,5 @@ tower-http = { version = "0.6.6", features = ["trace"] }
 env_logger = "0.11.8"
 log = "0.4.28"
 tracing = { version = "0.1.41", features = ["log"] }
+tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry"] }
+tracing-bunyan-formatter = "0.3.10"
