✨ 使用 tracing-log 来桥接 log 和 tracing；重构 log 方法

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ log = "0.4.28"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry"] }
 tracing-bunyan-formatter = "0.3.10"
+tracing-log = "0.2.0"
