--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ tracing = { version = "0.1.41", features = ["log"] }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry"] }
 tracing-bunyan-formatter = "0.3.10"
 tracing-log = "0.2.0"
+once_cell = "1.21.3"
 
 [dev-dependencies]
 reqwest = "0.12.23"
