--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1.18.1", features = ["v4"] }
 tower = "0.5.2"
-tower-http = { version = "0.6.6", features = ["trace"] }
+tower-http = { version = "0.6.6", features = ["trace", "request-id"] }
 # env_logger = "0.11.8"
 log = "0.4.28"
 tracing = { version = "0.1.41", features = ["log"] }
@@ -31,6 +31,7 @@ tracing-bunyan-formatter = "0.3.10"
 tracing-log = "0.2.0"
 once_cell = "1.21.3"
 secrecy = { version = "0.10.3", features = ["serde"] }
+dotenv = "0.15.0"
 
 [dev-dependencies]
 reqwest = "0.12.23"
