--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ tracing-log = "0.2.0"
 once_cell = "1.21.3"
 secrecy = { version = "0.10.3", features = ["serde"] }
 dotenv = "0.15.0"
+serde-aux = "4.7.0"
 
 [dev-dependencies]
 reqwest = "0.12.23"
