--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ once_cell = "1.21.3"
 secrecy = { version = "0.10.3", features = ["serde"] }
 dotenv = "0.15.0"
 serde-aux = "4.7.0"
+unicode-segmentation = "1.12.0"
 
 [dev-dependencies]
 reqwest = "0.12.23"
