--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ secrecy = { version = "0.10.3", features = ["serde"] }
 dotenv = "0.15.0"
 serde-aux = "4.7.0"
 unicode-segmentation = "1.12.0"
+claim = "0.5.0"
 
 [dev-dependencies]
 reqwest = "0.12.23"
