--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ dotenv = "0.15.0"
 serde-aux = "4.7.0"
 unicode-segmentation = "1.12.0"
 claim = "0.5.0"
+validator = "0.20.0"
 
 [dev-dependencies]
 reqwest = "0.12.23"
