--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,6 @@ validator = "0.20.0"
 [dev-dependencies]
 reqwest = "0.12.23"
 migration = { path = "migration" }
+fake = "4"
+quickcheck = "1.0.3"
+quickcheck_macros = "1.1.0"
