--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,9 +36,10 @@ serde-aux = "4.7.0"
 unicode-segmentation = "1.12.0"
 claim = "0.5.0"
 validator = "0.20.0"
+reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"]}
+lettre = { version = "0.11.18", features = ["pool"]}
 
 [dev-dependencies]
-reqwest = "0.12.23"
 migration = { path = "migration" }
 fake = "4"
 quickcheck = "1.0.3"
