--- a/configuration/local.yaml
+++ b/configuration/local.yaml
@@ -2,3 +2,7 @@ application:
   host: 127.0.0.1
 database:
   require_ssl: false
+email_client:
+  base_url: smtp.qq.com
+  smtp_username: 254693270@qq.com
+  smtp_password: nqwmhcwiyvrxbjdf
