--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ claim = "0.5.0"
 validator = "0.20.0"
 reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"]}
 lettre = { version = "0.11.18", features = ["pool"]}
+rand = { version = "0.9.2", features = ["std_rng"] }
 
 [dev-dependencies]
 migration = { path = "migration" }
